Fix permission tag and tagfamily handling